--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "fork-ts-checker-webpack-plugin": "^9.1.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-error-boundary": "^6.0.0",
     "react-icons": "^5.5.0",
     "styled-components": "^6.1.17"
   },
