--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^19.1.0",
     "react-error-boundary": "^6.0.0",
     "react-icons": "^5.5.0",
+    "react-router-dom": "^7.6.1",
     "styled-components": "^6.1.17"
   },
   "devDependencies": {
