refactor: path alias 미적용 폴더 적용

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,8 @@
       "@Components/*": ["./src/components/*"],
       "@Constants/*": ["./src/constants/*"],
       "@Types/*": ["./src/types/*"],
+      "@Utils/*": ["./src/utils/*"],
+      "@Hooks/*": ["./src/hooks/*"],
     },
     "lib": [
       "dom",
