--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "style-loader": "^3.3.4",
     "typescript": "^5.1.3",
     "webpack": "^5.99.5",
+    "webpack-bundle-analyzer": "^4.10.2",
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.1",
     "webpack-merge": "^6.0.1"
