--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "html-webpack-plugin": "^5.6.3",
     "mini-css-extract-plugin": "^2.9.2",
+    "msw": "^2.10.2",
     "prettier": "^3.5.3",
     "style-loader": "^3.3.4",
     "typescript": "^5.1.3",
@@ -56,5 +57,10 @@
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.1",
     "webpack-merge": "^6.0.1"
+  },
+  "msw": {
+    "workerDirectory": [
+      "public"
+    ]
   }
 }
